# devtools_scicomp_project_2025

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
experiments/: config.yaml
scripts/: run.py
shell/: submit.sh
src/: __init__.py
src/pyclassify/: classifier.py  utils.py
tests/: test_.py  test_classifier.py  test_utils.py
